new deps to pixi.toml

--- a/pixi.toml
+++ b/pixi.toml
@@ -20,3 +20,9 @@ jsonschema = ">=4.21.1"
 build = "*"
 black = "*"
 reportlab = "*"
+scipy = "*"
+numpy = "*"
+deepeval = "*"
+langchain_openai = "*"
+langchain = "*"
+rank_bm25 = "*"
