--- a/pixi.toml
+++ b/pixi.toml
@@ -17,6 +17,7 @@ beautifulsoup4 = "*"
 pillow = ">=10.2.0"
 pyyaml = ">=6.0.1"
 jsonschema = ">=4.21.1"
+bumpversion = "*"
 build = "*"
 black = "*"
 reportlab = "*"
