finished vector store search integration

--- a/pixi.toml
+++ b/pixi.toml
@@ -23,6 +23,8 @@ black = "*"
 reportlab = "*"
 scipy = "*"
 numpy = "*"
+faiss-gpu-cu12 = "*"
 deepeval = "*"
 langchain_openai = "*"
 langchain = "*"
+langchain_community = "*"
