--- a/pixi.toml
+++ b/pixi.toml
@@ -23,7 +23,7 @@ black = "*"
 reportlab = "*"
 scipy = "*"
 numpy = "*"
-faiss-gpu-cu12 = "*"
+faiss-cpu = "*"
 deepeval = "*"
 langchain_openai = "*"
 langchain = "*"
