fixing chunking issues

--- a/pixi.toml
+++ b/pixi.toml
@@ -8,6 +8,10 @@ platforms = ["linux-64", "osx-64"]
 python = ">=3.11"
 setuptools = ">=68.0"
 wheel = "*" 
+faiss = "*"
+langchain = "*"
+langchain-openai = "*"
+langchain-community = "*"
 
 [pypi-dependencies]
 openai = ">=1.78.1"
@@ -23,8 +27,4 @@ black = "*"
 reportlab = "*"
 scipy = "*"
 numpy = "*"
-faiss-cpu = "*"
 deepeval = "*"
-langchain_openai = "*"
-langchain = "*"
-langchain_community = "*"
