--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,22 +1,22 @@
 [bumpversion]
-current_version = 0.1.1
+current_version = 1.0.18
 commit = True
 tag = True
 tag_name = v{new_version}
 message = Bump version: {current_version} → {new_version}
 
 [bumpversion:file:README.md]
-search = Version = "{current_version}"
-replace = Version = "{new_version}"
+search = Version = {current_version}
+replace = Version = {new_version}
 
 [bumpversion:file:Makefile]
 search = VERSION = "{current_version}"
 replace = VERSION = "{new_version}"
 
-[bumpversion:file:tldr/__init__.py]
-search = __version__ = "{current_version}"
-replace = __version__ = "{new_version}"
-
 [bumpversion:file:pyproject.toml]
 search = version = "{current_version}"
 replace = version = "{new_version}"
+
+[bumpversion:file:tldr/__init__.py]
+search = __version__ = "{current_version}"
+replace = __version__ = "{new_version}"
