--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,26 +1,26 @@
 [project]
 name = "tldr"
-version = "1.0.18"
+version = "1.0.19"
 description = "Reads and summarizes top points from a provided series of articles using the OpenAI API."
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "openai>=1.78.1",
-    "python-docx",
-    "pypdf2",
-    "beautifulsoup4",
+    "python-docx>=1.0.0",
+    "pypdf2>=2.0.0",
+    "beautifulsoup4>=4.12.2",
     "pillow>=10.2.0",
     "pyyaml>=6.0.1",
     "jsonschema>=4.21.1",
-    "reportlab",
-    "black",
-    "faiss-cpu",
-    "langchain_community",
-    "langchain_openai",
-    "langchain",
-    "scipy",
-    "numpy",
-    "deepeval",
+    "reportlab>=4.0.8",
+    "black>=24.1.1",
+    "faiss-cpu>=1.7.4",
+    "langchain_community>=0.1.1",
+    "langchain_openai>=0.1.1",
+    "langchain>=0.1.1",
+    "scipy>=1.13.3",
+    "numpy>=1.26.3",
+    "deepeval>=0.1.1",
 ]
 
 [project.urls]
