--- a/pixi.toml
+++ b/pixi.toml
@@ -1,6 +1,6 @@
 [workspace]
 name = "tldr"
-version = "1.0.17"
+version = "1.0.30"
 channels = ["conda-forge"]
 platforms = ["linux-64", "osx-64"]
 
@@ -28,3 +28,5 @@ reportlab = "*"
 scipy = "*"
 numpy = "*"
 deepeval = "*"
+streamlit = "*"
+streamlit-frontend = "*"
