--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,13 +14,15 @@ dependencies = [
     "jsonschema>=4.21.1",
     "reportlab>=4.0.8",
     "black>=24.1.1",
-    "faiss-cpu>=1.7.4",
     "langchain_community>=0.1.1",
     "langchain_openai>=0.1.1",
     "langchain>=0.1.1",
     "scipy>=1.13.3",
     "numpy>=1.26.3",
     "deepeval>=0.1.1",
+    "streamlit>=1.42.0",
+    "streamlit-frontend>=1.42.0",
+    "faiss-cpu>=1.7.4",
 ]
 
 [project.urls]
