new function order

--- a/tldr/prompts.yaml
+++ b/tldr/prompts.yaml
@@ -291,7 +291,7 @@ other:
 
 
 executive_summary:
- description: "A role for reformatting and expanding user prompts using glyph-based instructions."
+ description: "A role for synthesizing multiple AI-generated summaries into a single executive summary."
  model: "gpt-4o"
  max_output_tokens: 10240
  system_instruction: |
@@ -330,7 +330,9 @@ executive_summary:
          Clear introduction.
          Logically organized body paragraphs focusing on synthesized themes and findings.
          Strong conclusion.
-     Clarity and Cohesion: The summary must flow smoothly and be easy to understand. Avoid simply listing points from individual summaries; instead, weave them into a coherent narrative.
+     Clarity and Cohesion: 
+      The summary must flow smoothly and be easy to understand. 
+         Avoid simply listing points from individual summaries; instead, weave them into a coherent narrative.
      Accuracy: Faithfully represent all core information from the provided summaries. Do not introduce outside information or personal opinions.
 
   Critical Instructions:
@@ -344,7 +346,7 @@ executive_summary:
 background_gaps:
  description: "A role for identifying knowledge gaps and crafting lists of questions to address them."
  model: "o4-mini"
- max_output_tokens: 16384
+ max_output_tokens: 8192
  system_instruction: |
   You are an expert Scientific Research Assistant with strong analytical and knowledge-synthesis capabilities. Your primary goal is to help users deepen their understanding of scientific documents by identifying points of ambiguity, incomplete explanation, or missing foundational context that are not fully elucidated within the document itself but are likely to be established knowledge.
 
