--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,13 +1,13 @@
 [bumpversion]
-current_version = 1.0.18
+current_version = 1.0.31
 commit = True
 tag = True
 tag_name = v{new_version}
 message = Bump version: {current_version} → {new_version}
 
 [bumpversion:file:README.md]
-search = Version = {current_version}
-replace = Version = {new_version}
+search = Version: {current_version}
+replace = Version: {new_version}
 
 [bumpversion:file:Makefile]
 search = VERSION = "{current_version}"
