--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,19 +1,23 @@
 [bumpversion]
-current_version = 1.0.18
+current_version = 1.0.32
 commit = True
 tag = True
 tag_name = v{new_version}
 message = Bump version: {current_version} → {new_version}
 
 [bumpversion:file:README.md]
-search = Version = {current_version}
-replace = Version = {new_version}
+search = Version: {current_version}
+replace = Version: {new_version}
 
 [bumpversion:file:Makefile]
 search = VERSION = "{current_version}"
 replace = VERSION = "{new_version}"
 
 [bumpversion:file:pyproject.toml]
+search = version = "{current_version}"
+replace = version = "{new_version}"
+
+[bumpversion:file:pixi.toml]
 search = version = "{current_version}"
 replace = version = "{new_version}"
 
