--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ dependencies = [
     "streamlit>=1.42.0",
     "faiss-cpu>=1.7.4",
     "tenacity>=8.2.3",
-    "langchain_google_genai>=0.1.1",
+    "langchain-google-genai>=0.1.1",
 ]
 
 [project.urls]
@@ -35,5 +35,4 @@ requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project.scripts]
-tldr = "tldr.tldr:cli_main"
-tldr_eval = "tldr.eval:cli_main"
+tldr = "tldr.tldr:run_tldr"
